--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
     "elm-brunch": "^0.11.1",
+    "elm": "^0.18.0",
     "uglify-js-brunch": "2.10.0"
   }
 }
